# qt6_cmake_example

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/Example/: CMakeLists.txt
app/qml/: Main.qml
examplelib/: CMakeLists.txt  examplelib.cpp  examplelib.h
